; ModuleID = '/home/carl/AnghaBench/freebsd/tools/tools/usbtest/extr_usb_msc_test.c_get_io_offset.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/tools/usbtest/extr_usb_msc_test.c_get_io_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_msc_params = type { i32 }

@.str = private unnamed_addr constant [14 x i8] c"Start Of Disk\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"Random Offset\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"Unknown\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.usb_msc_params*)* @get_io_offset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_io_offset(%struct.usb_msc_params* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.usb_msc_params*, align 8
  store %struct.usb_msc_params* %0, %struct.usb_msc_params** %3, align 8
  %4 = load %struct.usb_msc_params*, %struct.usb_msc_params** %3, align 8
  %5 = getelementptr inbounds %struct.usb_msc_params, %struct.usb_msc_params* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %9 [
    i32 128, label %7
    i32 129, label %8
  ]

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %10

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %10

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %10

10:                                               ; preds = %9, %8, %7
  %11 = load i8*, i8** %2, align 8
  ret i8* %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
